changed ibm capston week1

--- a/scripts/IBM Capston.ipynb
+++ b/scripts/IBM Capston.ipynb
@@ -9,15 +9,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
-     "ename": "SyntaxError",
-     "evalue": "EOL while scanning string literal (<ipython-input-3-18619d0f3c29>, line 4)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;36m  File \u001b[1;32m\"<ipython-input-3-18619d0f3c29>\"\u001b[1;36m, line \u001b[1;32m4\u001b[0m\n\u001b[1;33m    print(\"Hello Capstone Project Course!\"\")\u001b[0m\n\u001b[1;37m                                            ^\u001b[0m\n\u001b[1;31mSyntaxError\u001b[0m\u001b[1;31m:\u001b[0m EOL while scanning string literal\n"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Hello Capstone Project Course!\n"
      ]
     }
    ],
@@ -25,7 +24,7 @@
     "import pandas as pd\n",
     "import numpy as np\n",
     "\n",
-    "print(\"Hello Capstone Project Course!\"\")"
+    "print(\"Hello Capstone Project Course!\")"
    ]
   },
   {
